# LolaDrivesIOS

./: .gitignore  How to use the simulator and compile LolaDrive.txt  README.md
Greetings/: Podfile  README Obstacles and solution follwing Building and Deploying a Rust library on iOS.txt
Greetings/Greetings/: ContentView.swift  GreetingsApp.swift  Info.plist  LocationHelper.swift  MainActivity.swift  MyOBD.swift  PatternParser.swift  PcdfGenerator.swift  RDEValidator.swift  RustGreetings.swift  Uploader.swift  Util.swift  rde-lola-test-drive-spec-no-percentile.lola  rde-lola-test-drive-spec-no-percentile1.lola
Greetings/Greetings.xcodeproj/: project.pbxproj
Greetings/Greetings.xcworkspace/: contents.xcworkspacedata
Greetings/Greetings/Model/: CommandItem.swift  Dynamics.swift  EventStore.swift  Model.swift  Profile.swift  ProfileCommands.swift
Greetings/lola/: rde-lola-test-drive-spec-no-percentile1.lola  spec_custom.lola
Greetings/ppcdf/: 2021-09-13_12-02-52.ppcdf  2021-09-13_12-03-30.ppcdf  2021-09-13_12-04-29.ppcdf  2021-09-13_12-12-53.ppcdf
LolaDrives/: MultiSensorReducer.swift  Podfile
LolaDrives/LolaDrives/: LocationHelper.swift  LolaDrives-Bridging-Header.h  LolaDrivesApp.swift  MyOBD.swift  RDEValidator.swift  RustBridge.swift  Uploader.swift  Util.swift  spec01.lola
LolaDrives/LolaDrives.xcodeproj/: project.pbxproj
LolaDrives/LolaDrives.xcworkspace/: contents.xcworkspacedata
LolaDrives/ppcdf/: 2021-09-13_11-45-26.ppcdf  2021-09-13_15-07-19.ppcdf
cargo/: Cargo.toml
cargo/src/: bridge.rs  bridgeLib.h  greetings.h  lib.rs
(+69 files in other folders)
