[package]
name = "LolaDrives"
version = "0.1.0"
authors = ["Mei Chen <s8mechen@stud.uni-saarland.de>"]
edition = "2018"
description = "Example static library project built for iOS"
publish = false

[lib]
name = "LolaDrives"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtlola-interpreter = "0.7.0"
rtlola-frontend = "0.5.0"
ordered-float = "2.5.1"
byteorder = "1.3.2"

